==> BAIJIANGA/W25QXX_Diver/1_demo_W25QXX读写测试_文件系统/USER/Hardware/W25Qxx.c <==
#include "USER_BSP.h"
#include "USER_Hardware.h"
#include "main.h"
#include "W25Qxx.h"

void W25Qxx_hw_DMA_SendData(uint8_t* data,uint16_t len)
{
    //HAL_SPI_Transmit(&W25Qxx_SPI_handler,data,len,1000);
    HAL_SPI_Transmit_DMA(&W25Qxx_SPI_handler,data,len);
}

void W25Qxx_hw_DMA_ReadData(uint8_t* data,uint16_t len)
{
    //HAL_SPI_Receive(&W25Qxx_SPI_handler,data,len,100000);
    HAL_SPI_Receive_DMA(&W25Qxx_SPI_handler,data,len);
//    HAL_SPI_Transmit(&W25Qxx_SPI_handler,data,len,100);
}

void W25Qxx_hw_ReadData(uint8_t* data,uint16_t len)
{
    HAL_SPI_Receive(&W25Qxx_SPI_handler,data,len,100000);
//    HAL_SPI_Transmit(&W25Qxx_SPI_handler,data,len,100);
}
