==> BAIJIANGA/W25QXX_Diver/4_demo_标准库_SPI+DMA_文件系统/HARDWARE/User/spi_flash/W25Qxx.c <==
#include "W25Qxx.h"
#include "stdio.h"
#include "bsp_spi_flash.h"
#include "delay.h"

void W25Qxx_hw_DMA_SendData(uint8_t* data,uint16_t len)
{
    DMA1_Channel3->CCR &= ~0x01;
    DMA1_Channel3->CNDTR = (uint16_t)len;//传输数量
    DMA1_Channel3->CMAR  = (uint32_t)data;//内存地址
    DMA_Cmd(DMA1_Channel3, ENABLE);
    SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Tx,ENABLE);
    delay_ms(2);
    DMA_ClearFlag(DMA1_FLAG_TC3);//清除通道3传输完成标志
    DMA_Cmd(DMA1_Channel3, DISABLE);
    SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Tx,DISABLE);
}

void W25Qxx_hw_DMA_ReadData(uint8_t* data,uint16_t len)
{
    uint8_t a = len*2/256;
    DMA_Cmd(DMA1_Channel3, DISABLE);
    SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Tx,DISABLE);
    DMA_Cmd(DMA1_Channel2, DISABLE);
    SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Rx,DISABLE);
    DMA1_Channel3->CCR &= ~0x01;
    DMA1_Channel2->CNDTR = (uint16_t)len;//传输数量
    DMA1_Channel2->CMAR  = (uint32_t)data;//内存地址
    DMA_Cmd(DMA1_Channel2, ENABLE);
    DMA1_Channel3->CCR |= 0x01;
  	SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Rx,ENABLE);

    DMA1_Channel3->CCR &= ~0x01;
    DMA1_Channel3->CNDTR = (uint16_t)len;//传输数量
    DMA1_Channel3->CMAR  = (uint32_t)data;//内存地址
    DMA_Cmd(DMA1_Channel3, ENABLE);
    DMA1_Channel3->CCR |= 0x01;

  	SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Tx,ENABLE);
        delay_ms(a);
        DMA_ClearFlag(DMA1_FLAG_TC2);//清除通道3传输完成标志
         DMA_ClearFlag(DMA1_FLAG_TC3);//清除通道3传输完成标志
    DMA_Cmd(DMA1_Channel3, DISABLE);
    SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Tx,DISABLE);
    DMA_Cmd(DMA1_Channel2, DISABLE);
    SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Rx,DISABLE);
}

void W25Qxx_hw_ReadData(uint8_t* data,uint16_t len)
{
  while (len--) /* while there is data to be read */
  {
    /* 读取一个字节*/
    *data = SPI_FLASH_SendByte(Dummy_Byte);
    /* 指向下一个字节缓冲区 */
    data++;
  }
}
